migrated-output.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/connect-timeout: "5000000"
    konghq.com/plugins: full-coverage-rate-limiting, full-coverage-oidc, full-coverage-cors,
      full-coverage-request-size-limiting, full-coverage-request-transformer-headers,
      full-coverage-response-transformer-headers, full-coverage-proxy-cache
    konghq.com/read-timeout: "10000000"
    konghq.com/write-timeout: "10000000"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-User, X-Auth-Token
    nginx.ingress.kubernetes.io/base-auth-secret: my-basic-auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Injected-Header "FullCoverage";
      more_set_headers "X-Response-Header: True";
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
  name: full-coverage
  namespace: defaults
spec:
  ingressClassName: kong
  rules:
  - host: coverage.example.com
    http:
      paths:
      - backend:
          service:
            name: echo-v1
            port:
              number: 80
        path: /api
        pathType: Prefix
status:
  loadBalancer: {}
---
